--- a/example/labelimg.css
+++ b/example/labelimg.css
@@ -87,9 +87,10 @@ polygon:hover {
 
 .lbi-main {
     box-sizing: border-box;
+    position: relative;
     float: left;
     width: 920px;
-    padding: 25px;
+    padding: 20px;
     margin-right: 20px;
     border-radius: 5px;
     background-color: #fff;
@@ -111,12 +112,13 @@ polygon:hover {
 }
 .lbi-paint-box {
     position: relative;
-    height: 500px;
+    height: 550px;
     border: 1px solid #eee;
     clear: both;
 }
 .lbi-svg-box {
-    height: 500px;
+    position: relative;
+    height: 550px;
     overflow: auto;
 }
 .lbi-svg-box::-webkit-scrollbar {
@@ -138,8 +140,11 @@ polygon:hover {
     background: #E6E6E6;
 }
 .lbi-svg {
-    width: 100%;
-    height: 500px;
+    position: absolute;
+    left: 0;
+    top: 0;
+/*    width: 100%;
+    height: 500px;*/
 }
 .lbi-xaxis {
     position: absolute;
@@ -156,14 +161,51 @@ polygon:hover {
     width: 2px;
     background-color: #1c79c6;
 }
-
-.lbi-side {
-    box-sizing: border-box;
-    float: left;
-    width: 260px;
-    padding: 25px;
+.lbi-select-box {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    padding: 15px 20px;
+    border: 1px solid #ccc;
     border-radius: 5px;
     background-color: #fff;
+    transform: translate(-50%,-50%);
+}
+.lbi-select-label {
+    display: block;
+    margin: 15px 0;
+    font-size: 14px;
+    color: #333;
+}
+.lbi-select {
+    width: 100px;
+}
+.lbi-select-btn {
+    width: 100%;
+    padding: 6px 0;
+    border: 1px solid #46b8da;
+    border-radius: 4px;
+    background-color: #5bc0de;
+    color: #fff;
+    cursor: pointer;
+}
+
+
+.lbi-side {
+    float: left;
+}
+.lbi-side-item {
+    box-sizing: border-box;
+    width: 260px;
+    padding: 20px;
+    margin-bottom: 20px;
+    border-radius: 5px;
+    background-color: #fff;
+}
+.lbi-side-item:nth-child(2) {
+    height: 456px;
+    margin-bottom: 0;
+    overflow-y: auto;
 }
 .lbi-side-tt {
     font-size: 14px;
@@ -181,16 +223,17 @@ polygon:hover {
     border-radius: 50%;
     cursor: pointer;
 }
-.lbi-way-box {
+.lbi-shape-box {
     display: flex;
     margin-top: 10px;
     justify-content: space-between;
 }
-.lbi-way-btn {
-    width: 50px;
-    line-height: 30px;
+.lbi-shape-btn {
+    padding: 6px 12px;
     border: 1px solid #ccc;
+    border-radius: 4px;
     background-color: #fff;
+    color: #333;
     cursor: pointer;
 }
 
